; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_helper.c_rofi_escape_markup.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_helper.c_rofi_escape_markup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @rofi_escape_markup(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %14

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32* @g_markup_escape_text(i32* %9, i32 -1)
  store i32* %10, i32** %4, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @g_free(i32* %11)
  %13 = load i32*, i32** %4, align 8
  store i32* %13, i32** %2, align 8
  br label %14

14:                                               ; preds = %8, %7
  %15 = load i32*, i32** %2, align 8
  ret i32* %15
}

declare dso_local i32* @g_markup_escape_text(i32*, i32) #1

declare dso_local i32 @g_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
